--- a/Report/05-methodology.tex
+++ b/Report/05-methodology.tex
@@ -16,7 +16,7 @@ Due to restraints on computational power 30 random traces and 30 Sancho generate
 
 The three ILP systems were trained on the random, intelligent and mixed game traces using the same settings as were used in the IGGP paper \cite{Cropper/IGGP}. These settings are:
 \begin{itemize}
-	\item Metagol - Metagol 2.2.3 with YAP 6.2.2. The metarules used can be found in the IGGP code repository.
+	\item Metagol - Metagol 2.2.3 with YAP 6.2.2. The metarules used can be found in the IGGP code repository\footnote{https://github.com/andrewcropper/mlj19-iggp accessed 23/05/20}.
 	\item Aleph - Aleph 5 with YAP 6.2.2. The default Aleph parameters were used.
 	\item ILASP - A specialised version ILASP* developed for this task was used and can be found in the IGGP code repository. It is based on ILASP2i.
 \end{itemize}
@@ -60,7 +60,7 @@ Each system was tested on 4 randomly generated and 4 intelligently generated tra
 
 \textbf{Balanced accuracy} In the datasets used for testing the ILP systems the vast majority of examples are negative. Balanced accuracy takes this into account when evaluating approaches. The generated logical hypothesis $H$ along with the background knowledge $B$ for the relevant game is tested. The test data is the set of combined positive and negative testing examples $E^+ \cup E^-$. We define the number of positive examples $p = |E^+|$, the number of negative examples $n = |E^-|$, the number of correctly predicted positives as $tp = |\{e\in E^+|B\cup H \models e\}|$ and the number of correctly predicted negatives as $tn = |\{e\in E^-|B\cup H \not\models e\}|$. The balanced accuracy is subsequently defined as $ba = 100 \cdot (tp/p + tn/n)/2$.
 
-\textbf{Perfectly solved} This metric considers the number of predicates for which the ILP system correctly classified all examples. It is equivalent to the number of games with a balanced accuracy score of 100. This metric is important since for all predicates there exists an exact solution (the rules that were used to generate the examples). A system that has correctly predicated 99\% of the results is not as useful as one that predicts 100\%.
+\textbf{Perfectly solved} This metric considers the number of predicates for which the ILP system correctly classified all examples. It is equivalent to the number of games with a balanced accuracy score of 100. This metric is important since for all predicates there exists an exact solution (the rules that were used to generate the examples). A system that has correctly predicated 99\% of the results is not nearly as useful as one that predicts 100\%.
 \\
 
 In the results section (chapter \ref{ch:results}) we present only the aggregate scores in the results since the full results are too large for this paper. To evaluate the systems we compare the average balanced accuracy and the number of perfectly solved games when tested on optimal and random traces.
